2008-11-20  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Ide.mdp:
	* MonoDevelop.Ide.FindInFiles:
	* MonoDevelop.Ide.FindInFiles/SearchResult.cs:
	* MonoDevelop.Ide.FindInFiles/SearchResultPad.cs:
	* MonoDevelop.Ide.FindInFiles/SearchResultWidget.cs: Remove unused code.

	* gtk-gui/gui.stetic: Flush.

2008-11-20  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Components/ExtensibleTreeView.cs: Make sure
	something is always selected when filling the tree. Fixes bug #446906
	- Can't run a C / C++ project without opening a file from the project
	first.

2008-11-20  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Components/ExtensibleTreeView.cs: Fix bug #Bug
	431791 - Opening multiple files doesn't work.

2008-11-20  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui.Search/IDocumentIterator.cs:
	* MonoDevelop.Ide.Gui.Search/FilesDocumentIterator.cs:
	* MonoDevelop.Ide.Gui.Search/AllOpenDocumentIterator.cs:
	* MonoDevelop.Ide.Gui.Search/DirectoryDocumentIterator.cs:
	* MonoDevelop.Ide.Gui.Search/SearchReplaceInFilesManager.cs:
	* MonoDevelop.Ide.Gui.Search/WholeCombineDocumentIterator.cs:
	* MonoDevelop.Ide.Gui.Search/CurrentProjectDocumentIterator.cs: Make
	searc/replace status messages specific to the file iterator type.
	Fixes Bug 440909 - Find in Files reports wrong project path.

2008-11-20  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Ide.mdp:
	* MonoDevelop.Ide.Gui/StatusProgressMonitor.cs:
	* MonoDevelop.Ide.Gui.Dialogs/ProgressMonitorResultDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.ProgressMonitorResultDialog.cs:
	When presenting the results of an operation in a dialog, show them
	inside a scrolled window, to avoid huge windows when there are many
	errors or warnings. Fixes bug #443164 - Too large dialog when the
	load of a solution yields a lot of warnings.

	* gtk-gui/objects.xml:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.TipOfTheDayWindow.cs: